--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -23,6 +23,9 @@
         "prettier"
     ],
     "rules": {
+      "@typescript-eslint/no-unused-vars": ["error", {
+        "argsIgnorePattern": "_"
+      }],
       "@typescript-eslint/camelcase": "off",
       "import/extensions": [
         "error",
