--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -26,6 +26,7 @@
       "@typescript-eslint/no-unused-vars": ["error", {
         "argsIgnorePattern": "_"
       }],
+      "@typescript-eslint/interface-name-prefix": ["error", { "prefixWithI": "always" }],
       "@typescript-eslint/camelcase": "off",
       "import/extensions": [
         "error",
