--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,4 +9,7 @@ MAIL_DRIVER=ethereal
 # AWS Credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+# AWS_DEFAULT_REGION=sa-east-1
 
+# Storage
+STORAGE_DRIVER=
