--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -27,6 +27,7 @@
   "rules": {
     "no-unused-expressions": "off",
     "react/prop-types": "off",
+    "import/no-duplicates": "off",
     "react/jsx-props-no-spreading": "off",
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
