--- a/web/package.json
+++ b/web/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.4.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
+    "axios-mock-adapter": "^1.18.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
@@ -16,7 +18,9 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "^2.0.4"
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "prettier": "^2.0.4",
+    "react-test-renderer": "^16.13.1"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -31,6 +35,7 @@
     "@unform/web": "^2.1.3",
     "axios": "^0.19.2",
     "date-fns": "^2.15.0",
+    "jsdom": "^16.4.0",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-day-picker": "^7.4.8",
@@ -47,7 +52,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll false",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
